--- a/index.html
+++ b/index.html
@@ -65,12 +65,16 @@
         </div>
         
     </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
+	<path class="elementor-shape-fill" d="M500.2,94.7L0,0v100h1000V0L500.2,94.7z"></path>
+</svg>
+  
    
    </div>
-   
+  
   <!-- about judges -->
 
-  <div class="container-lg about-judges">
+  <div class="container-lg about-judges mt-5">
     <div class="row">
         <div class="col-md-4 p-0 d-flex align-items-center  justify-content-center">
             <div class="judge-box">
